✨ Production release: CustomTkinter UI + Silent startup + Exe build ready
- ✅ Main CustomTkinter UI (main_ctk.py) production ready with VERBOSE_LOG=False
- ✅ Silent startup: All debug prints wrapped in conditional (clean professional launch)
- ✅ Exe build tested: TroLyLichTrinhV2.exe (986 MB) successfully created
- ✅ Fixed PyInstaller spec: Excluded empty sounds folders, added comprehensive hiddenimports
- ✅ Document migration: Moved all version docs to version_document/ folder
- ✅ Sound system integration: sound_manager.py with preset/custom sounds support
- ✅ Widgets modularization: Calendar, notifications, theme switcher in widgets/
- ✅ Training data: Comprehensive datasets for PhoBERT fine-tuning
- ✅ Updated .gitignore: Excludes build artifacts, db temp files, version_document/
- 🔧 Build command: `.venv\Scripts\python.exe -m PyInstaller build_main_ctk.spec`

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,15 @@ venv/
 /dist/
 /build/
 *.spec
+build_main_ctk.spec
 
 # Database file
 /database/*.db
+*.db-shm
+*.db-wal
+
+# Version documents archive
+/version_document/
 
 # Editor/IDE
 .vscode/
